fixing hills background on mobile

--- a/templates/ee/less/template.less
+++ b/templates/ee/less/template.less
@@ -2440,6 +2440,9 @@ header {
         background-size: 100% 160px;
         background-position: center bottom;
       }
+      @media (max-width:@screen-mb-max) {
+        background-size: auto 75px;
+      }
     }
   }
   .cs-nav {
